services/monitoring/k8s/service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: apps
spec:
  selector:
    app: prometheus
  type:
  ports:
    - name: prometheus
      protocol: TCP
      port: 9090
      targetPort: 9090
---
